# autocoarsening

./: CMakeLists.txt  LICENSE.TXT  README.md
opencl_tools/function_overload/include/: Utils.h
opencl_tools/function_overload/src/: AxtorWrapper.cpp  OCLWrapper.cpp  Utils.cpp
opencl_tools/opencl_wrapper/: CMakeLists.txt
opencl_tools/opencl_wrapper/include/: Queue.h
opencl_tools/opencl_wrapper/lib/: Device.cpp  Program.cpp  Queue.cpp
patch/: autocoarsening_extension.patch
tests/: runTests.py
tests/memcpy/src/: main.cpp
tests/memset/src/: main.cpp
tests/mm/kernels/: mm.cl
tests/mm/src/: main.cpp
tests/mt/src/: main.cpp
tests/mv/src/: main.cpp
tests/polybench/OpenCL/2DCONV/: 2DConvolution.cpp
tests/polybench/OpenCL/2MM/: 2mm.cpp
tests/polybench/OpenCL/3DCONV/: 3DConvolution.cpp
tests/polybench/OpenCL/3MM/: 3mm.cpp
tests/polybench/OpenCL/ATAX/: atax.cpp
tests/polybench/OpenCL/CORR/: correlation.cpp
tests/polybench/OpenCL/COVAR/: covariance.cl  covariance.cpp
tests/polybench/OpenCL/FDTD-2D/: fdtd2d.cpp
tests/polybench/OpenCL/GRAMSCHM/: gramschmidt.cpp
tests/polybench/OpenCL/MVT/: mvt.cpp
tests/polybench/OpenCL/SYR2K/: syr2k.cpp
tests/polybench/OpenCL/SYRK/: syrk.cl  syrk.cpp
thrud/: CMakeLists.txt
thrud/include/thrud/: AssumeRestrictArgs.h  CacheLineReuseAnalysis.h  DataTypes.h  DivergenceAnalysis.h  MemAccessDescriptor.h  NDRange.h  OccupancyReduction.h  ReplaceGlobalIds.h  ThreadCoarsening.h  Utils.h
thrud/lib/: AssumeRestrictArgs.cpp  CacheLineReuseAnalysis.cpp  Coarsening.cpp  ControlDependenceAnalysis.cpp  DivergenceAnalysis.cpp  MemAccessDescriptor.cpp  NDRange.cpp  NDRangeScaling.cpp  OccupancyReduction.cpp  ReplaceGlobalIds.cpp  ThreadCoarsening.cpp  Utils.cpp
thrud/tests/coarsening/: runTests.py
